--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "d3-selection": "^1.3.0",
     "handle-error-web": "^1.0.1",
     "object-form": "^0.9.2",
+    "probable": "^2.1.2",
     "route-state": "^1.1.2",
     "standard-bail": "^2.0.1"
   }
