--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "basic-browser-request": "^9.0.0",
+    "d3-color": "^1.2.3",
     "d3-selection": "^1.3.0",
     "handle-error-web": "^1.0.1",
     "object-form": "^0.9.2",
