--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "basic-browser-request": "^9.0.0",
     "d3-color": "^1.2.3",
     "d3-selection": "^1.3.0",
+    "good-ia-source-image-probable-def": "^1.0.0",
     "handle-error-web": "^1.0.1",
     "lodash.curry": "^4.1.1",
     "object-form": "^0.9.2",
     "probable": "^2.1.2",
     "qs": "^6.5.2",
+    "random-internet-archive": "^3.0.0",
     "route-state": "^1.2.0",
     "seedrandom": "^2.4.4",
     "standard-bail": "^2.0.1"
